# cake

./: compile  open
chrome/: browser_exposed_mojom_targets.gni  chrome_paks.gni
chrome/app/theme/chromium/: BRANDING
chrome/browser/: BUILD.gn  chrome_browser_interface_binders.cc
chrome/browser/resources/: BUILD.gn
chrome/browser/resources/cake_new_tab/: .gitignore  BUILD.gn  app.tsx  craco.config.js  index.css  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  ui.css
chrome/browser/resources/cake_new_tab/public/: index.html
chrome/browser/resources/cake_new_tab/src/: App.tsx  index.tsx  proxy.ts
chrome/browser/resources/cake_new_tab/src/components/: Card.tsx
chrome/browser/resources/cake_new_tab/src/components/Omnibar/: Omnibar.tsx  SuperInput.tsx  omnibar.scss
chrome/browser/resources/cake_new_tab/src/dev/: deps.ts  mojom.ts  proxy.ts
chrome/browser/resources/cake_new_tab/src/dev/data/: search.ts
chrome/browser/resources/cake_new_tab/src/omni/: InlineAutocomplete.tsx  Omni.tsx  SearchResult.tsx  omni-inline-autocomplete.scss  omni-search-result.scss  omni.scss  overrides.ts  types.ts  utils.ts
chrome/browser/resources/cake_new_tab/src/pages/: EntryPage.tsx  PageManager.tsx  ntp.scss  types.ts
chrome/browser/resources/cake_new_tab/src/styles/: global.scss  index.scss
chrome/browser/resources/cake_new_tab/src/utils/: cn.ts  url.ts
chrome/browser/resources/hello_world/: BUILD.gn  app.tsx  hello_world.html  hello_world.tsx
chrome/browser/ui/: BUILD.gn  browser.cc
chrome/browser/ui/views/frame/: browser_frame.cc  browser_frame_mac.mm  browser_view.cc  browser_view_layout.cc  browser_view_layout.h
chrome/browser/ui/webui/: chrome_web_ui_configs.cc  chrome_web_ui_controller_factory.cc
chrome/browser/ui/webui/cake_new_tab/: BUILD.gn  cake_new_tab.mojom  cake_new_tab_page_handler.cc  cake_new_tab_page_handler.h  cake_new_tab_ui.cc  cake_new_tab_ui.h
chrome/browser/ui/webui/hello_world/: hello_world_ui.cc  hello_world_ui.h
chrome/browser/ui/webui/new_tab_page/: new_tab_page_ui.cc  new_tab_page_ui.h
chrome/browser/ui/webui/omnibox/: omnibox_ui.cc
chrome/common/: webui_url_constants.cc  webui_url_constants.h
components/infobars/core/: infobar_manager.cc
components/remote_cocoa/app_shim/: native_widget_ns_window_bridge.mm
tools/grit/: preprocess_if_expr.py
tools/grit/grit/node/: base.py
tools/gritsettings/: resource_ids.spec
tools/typescript/: path_mappings.py  ts_library.py  tsconfig_base_react.json  validate_tsconfig.py
ui/views/: painter.cc  painter.h
ui/views/cocoa/: native_widget_mac_ns_window_host.mm
ui/webui/resources/: BUILD.gn
ui/webui/resources/tools/: build_webui.gni  bundle_js.gni  bundle_js_excludes.gni
