import("//ui/webui/resources/tools/build_webui.gni")

build_webui("build") {
  grd_prefix = "cake_new_tab"
  webui_context_type = "trusted"

  static_files = [
    "index.html",
    "src/styles/index.css",
  ]

  non_web_component_files = [
    "src/index.tsx",
    "src/App.tsx"
  ]

  ts_deps = [ 
    "//third_party/cake_ui:build_ts"
  ]

  ts_path_mappings = [
    "resources/cake_ui/ui.rollup.js|../../../../third_party/cake_ui/ui.d.ts"
  ]
}
